--- a/cab-admin/pom.xml
+++ b/cab-admin/pom.xml
@@ -15,10 +15,6 @@
   <name>cab-admin</name>
   <description>Cab Management portal</description>
 
-  <properties>
-    <java.version>1.8</java.version>
-  </properties>
-
   <dependencies>
     <dependency>
       <groupId>org.springframework.boot</groupId>
@@ -53,7 +49,7 @@
     <dependency>
       <groupId>org.junit.jupiter</groupId>
       <artifactId>junit-jupiter</artifactId>
-      <version>5.7.0-M1</version>
+      <version>5.6.2</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
