--- a/pom.xml
+++ b/pom.xml
@@ -7,14 +7,9 @@
   <version>1.0-SNAPSHOT</version>
   <name>cab</name>
   <url>http://maven.apache.org</url>
-  <dependencies>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>3.8.1</version>
-      <scope>test</scope>
-    </dependency>
-  </dependencies>
+  <properties>
+    <java.version>1.8</java.version>
+  </properties>
   <modules>
     <module>cab-user</module>
     <module>cab-admin</module>
