--- a/pom.xml
+++ b/pom.xml
@@ -1,17 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>in.rsh.cab</groupId>
+<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xmlns="http://maven.apache.org/POM/4.0.0"
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <artifactId>cab</artifactId>
-  <packaging>pom</packaging>
-  <version>1.0-SNAPSHOT</version>
-  <name>cab</name>
-  <url>http://maven.apache.org</url>
-  <properties>
-    <java.version>1.8</java.version>
-  </properties>
+  <groupId>in.rsh.cab</groupId>
+  <modelVersion>4.0.0</modelVersion>
   <modules>
     <module>cab-user</module>
     <module>cab-admin</module>
   </modules>
+  <name>cab</name>
+  <packaging>pom</packaging>
+  <properties>
+    <java.version>1.8</java.version>
+  </properties>
+  <url>http://maven.apache.org</url>
+  <version>1.0-SNAPSHOT</version>
 </project>
