--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -5,12 +5,7 @@
 
 version: 2
 updates:
-  - package-ecosystem: "cab-admin" # See documentation for possible values
-    directory: "cab-admin/" # Location of package manifests
-    schedule:
-      interval: "weekly"
-      
-  - package-ecosystem: "cab-user" # See documentation for possible values
-    directory: "cab-user/" # Location of package manifests
+  - package-ecosystem: "maven" # See documentation for possible values
+    directory: "/" # Location of package manifests
     schedule:
       interval: "weekly"
