--- a/cab-admin/pom.xml
+++ b/cab-admin/pom.xml
@@ -3,14 +3,24 @@
   xmlns="http://maven.apache.org/POM/4.0.0"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <artifactId>cab-admin</artifactId>
-  <build>
-    <plugins>
-      <plugin>
-        <artifactId>spring-boot-maven-plugin</artifactId>
-        <groupId>org.springframework.boot</groupId>
-      </plugin>
-    </plugins>
-  </build>
+
+  <parent>
+    <artifactId>spring-boot-starter-parent</artifactId>
+    <groupId>org.springframework.boot</groupId>
+    <relativePath/>
+    <version>3.0.5</version>
+  </parent>
+
+  <description>Cab Management portal</description>
+  <groupId>in.rsh.cab.admin</groupId>
+  <modelVersion>4.0.0</modelVersion>
+  <name>cab-admin</name>
+  <version>0.0.1-SNAPSHOT</version>
+
+  <properties>
+    <java.version>17</java.version>
+  </properties>
+
   <dependencies>
     <dependency>
       <artifactId>spring-boot-starter-jersey</artifactId>
@@ -27,15 +37,15 @@
       <optional>true</optional>
     </dependency>
     <dependency>
+      <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-test</artifactId>
+      <scope>test</scope>
       <exclusions>
         <exclusion>
           <artifactId>junit</artifactId>
           <groupId>junit</groupId>
         </exclusion>
       </exclusions>
-      <groupId>org.springframework.boot</groupId>
-      <scope>test</scope>
     </dependency>
     <dependency>
       <artifactId>gson</artifactId>
@@ -48,19 +58,19 @@
       <scope>test</scope>
       <version>5.9.2</version>
     </dependency>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-validation</artifactId>
+    </dependency>
   </dependencies>
-  <description>Cab Management portal</description>
-  <groupId>in.rsh.cab.admin</groupId>
-  <modelVersion>4.0.0</modelVersion>
-  <name>cab-admin</name>
 
-  <parent>
-    <artifactId>spring-boot-starter-parent</artifactId>
-    <groupId>org.springframework.boot</groupId>
-    <relativePath/>
-    <version>2.1.2.RELEASE</version>
-  </parent>
-
-  <version>0.0.1-SNAPSHOT</version>
+  <build>
+    <plugins>
+      <plugin>
+        <artifactId>spring-boot-maven-plugin</artifactId>
+        <groupId>org.springframework.boot</groupId>
+      </plugin>
+    </plugins>
+  </build>
 
 </project>
