--- a/cab-user/pom.xml
+++ b/cab-user/pom.xml
@@ -16,19 +16,17 @@
       </plugin>
     </plugins>
   </build>
-  <!--TODO: Make this spring boot and use Thymeleaf -->
   <dependencies>
+    <dependency>
+      <groupId>in.rsh.cab.commons</groupId>
+      <artifactId>cab-commons</artifactId>
+      <version>0.0.1-SNAPSHOT</version>
+    </dependency>
     <dependency>
       <artifactId>lombok</artifactId>
       <groupId>org.projectlombok</groupId>
       <scope>provided</scope>
       <version>1.18.28</version>
-    </dependency>
-    <dependency>
-      <artifactId>javax.servlet-api</artifactId>
-      <groupId>javax.servlet</groupId>
-      <scope>provided</scope>
-      <version>4.0.1</version>
     </dependency>
     <dependency>
       <artifactId>json</artifactId>
