--- a/cab-commons/pom.xml
+++ b/cab-commons/pom.xml
@@ -54,8 +54,12 @@
     <build>
         <plugins>
             <plugin>
-                <artifactId>spring-boot-maven-plugin</artifactId>
-                <groupId>org.springframework.boot</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>17</source>
+                    <target>17</target>
+                </configuration>
+                <groupId>org.apache.maven.plugins</groupId>
             </plugin>
         </plugins>
     </build>
