--- a/cab-admin/pom.xml
+++ b/cab-admin/pom.xml
@@ -18,7 +18,7 @@
   <version>0.0.1-SNAPSHOT</version>
 
   <properties>
-    <java.version>17</java.version>
+    <java.version>21</java.version>
   </properties>
 
   <dependencies>
@@ -68,14 +68,15 @@
       <artifactId>spring-boot-starter-validation</artifactId>
     </dependency>
   </dependencies>
-
   <build>
     <plugins>
       <plugin>
-        <artifactId>spring-boot-maven-plugin</artifactId>
-        <groupId>org.springframework.boot</groupId>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <configuration>
+          <release>${java.version}</release>
+        </configuration>
       </plugin>
     </plugins>
   </build>
-
 </project>
