--- a/cab-commons/pom.xml
+++ b/cab-commons/pom.xml
@@ -16,9 +16,8 @@
     <modelVersion>4.0.0</modelVersion>
     <name>cab-commons</name>
     <version>0.0.1-SNAPSHOT</version>
-
     <properties>
-        <java.version>17</java.version>
+        <java.version>21</java.version>
     </properties>
 
     <dependencies>
@@ -50,18 +49,15 @@
             <version>5.10.2</version>
         </dependency>
     </dependencies>
-
     <build>
         <plugins>
             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
-                    <source>17</source>
-                    <target>17</target>
+                    <release>${java.version}</release>
                 </configuration>
-                <groupId>org.apache.maven.plugins</groupId>
             </plugin>
         </plugins>
     </build>
-
 </project>
