--- a/cab-user/pom.xml
+++ b/cab-user/pom.xml
@@ -39,13 +39,16 @@
   <url>http://maven.apache.org</url>
 
   <version>1.0-SNAPSHOT</version>
+  <properties>
+    <java.version>21</java.version>
+  </properties>
   <build>
     <plugins>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
         <configuration>
-          <release>21</release>
+          <release>${java.version}</release>
         </configuration>
       </plugin>
     </plugins>
