--- a/cab-commons/pom.xml
+++ b/cab-commons/pom.xml
@@ -16,9 +16,6 @@
     <modelVersion>4.0.0</modelVersion>
     <name>cab-commons</name>
     <version>0.0.1-SNAPSHOT</version>
-    <properties>
-        <java.version>21</java.version>
-    </properties>
 
     <dependencies>
         <dependency>
@@ -55,7 +52,8 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
-                    <release>${java.version}</release>
+                    <source>21</source>
+                    <target>21</target>
                 </configuration>
             </plugin>
         </plugins>
