--- a/cab-user/pom.xml
+++ b/cab-user/pom.xml
@@ -39,16 +39,14 @@
   <url>http://maven.apache.org</url>
 
   <version>1.0-SNAPSHOT</version>
-  <properties>
-    <java.version>21</java.version>
-  </properties>
   <build>
     <plugins>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
         <configuration>
-          <release>${java.version}</release>
+          <source>21</source>
+          <target>21</target>
         </configuration>
       </plugin>
     </plugins>
