--- a/pom.xml
+++ b/pom.xml
@@ -14,4 +14,13 @@
     <packaging>pom</packaging>
     <url>http://maven.apache.org</url>
     <version>1.0-SNAPSHOT</version>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.jacoco</groupId>
+                <artifactId>jacoco-maven-plugin</artifactId>
+                <version>0.8.12</version>
+            </plugin>
+        </plugins>
+    </build>
 </project>
