Use strategy pattern for finding cab

--- a/cab-commons/pom.xml
+++ b/cab-commons/pom.xml
@@ -73,6 +73,33 @@
                             <goal>report</goal>
                         </goals>
                     </execution>
+                    <execution>
+                        <id>check</id>
+                        <goals>
+                            <goal>check</goal>
+                        </goals>
+                        <configuration>
+                            <excludes>
+                                <exclude>**/model/*Type*</exclude>
+                                <exclude>**/model/*Status*</exclude>
+                                <exclude>**/model/Driver*</exclude>
+                                <exclude>**/model/DrivingLicense*</exclude>
+                                <exclude>**/adapter/*</exclude>
+                            </excludes>
+                            <rules>
+                                <rule>
+                                    <element>CLASS</element>
+                                    <limits>
+                                        <limit>
+                                            <counter>LINE</counter>
+                                            <value>COVEREDRATIO</value>
+                                            <minimum>0.90</minimum>
+                                        </limit>
+                                    </limits>
+                                </rule>
+                            </rules>
+                        </configuration>
+                    </execution>
                 </executions>
             </plugin>
         </plugins>
