--- a/cab-user/pom.xml
+++ b/cab-user/pom.xml
@@ -27,6 +27,17 @@
       <scope>test</scope>
       <version>6.0.2</version>
     </dependency>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-data-jpa</artifactId>
+      <version>3.4.3</version>
+    </dependency>
+    <dependency>
+      <groupId>com.h2database</groupId>
+      <artifactId>h2</artifactId>
+      <version>2.3.232</version>
+      <scope>runtime</scope>
+    </dependency>
   </dependencies>
   <groupId>in.r.cab.user</groupId>
   <modelVersion>4.0.0</modelVersion>
